Use AMD, decouple the jQuery plugin from other classes (Resource, Pagination)
- Create Class based on John Resig's class and CanJS Constructor implementation;
- Change $.fn.paginate to manage moreButton and manage pagination;
- Updated tests accordingly;

--- a/.jshintrc
+++ b/.jshintrc
@@ -10,5 +10,9 @@
   "smarttabs": false,
   "trailing": true,
   "undef": true,
-  "unused": true
+  "unused": true,
+  "globals": {
+    "define": false,
+    "require": false
+  }
 }
